# TextClassificationSuite

./: .gitignore  .pre-commit-config.yaml  EXPERIMENTS.md  PoC.ipynb  PoC2.ipynb  README.md  prompt.md  pyproject.toml
app/frontend/: package-lock.json  package.json  tsconfig.json
app/frontend/src/: App.tsx
data/: text_classification_samples_200.csv
data_ref/: glossary_terms.json  pdf_glossary_builder.ipynb
data_ref/done/: glossary_terms.json
scripts/: poc2_runner.py
src/app/backend/: config.py  pipeline.py  server.py
src/app/backend/api/: schemas.py
src/app/backend/application/services/: data_service.py  diagnostic_service.py  model_selection_service.py
src/app/backend/domain/: entities.py
src/app/backend/infrastructure/: data_loader.py  embeddings.py  model_specs.py
