[project]
name = "shipai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "fastapi>=0.115.5",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "python-multipart>=0.0.9",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.32.0",
    "nbstripout>=0.8.1",
    "pre-commit>=4.4.0",
]
