[project]
name = "shipai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.55.3",
    "pydantic>=2.9.2",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "fastapi>=0.115.5",
    "lightgbm>=4.6.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.4",
    "optuna>=4.5.0",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "python-multipart>=0.0.9",
    "pyarrow>=22.0.0",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.32.0",
    "nbstripout>=0.8.1",
    "pre-commit>=4.4.0",
    "python-certifi-win32>=1.6.1",
    "huggingface-hub[hf-xet]>=0.36.0",
    "python-dotenv>=1.2.1",
    "langchain>=1.0.5",
    "langchain-openai>=1.0.2",
    "langchain-chroma>=0.1.4",
    "pypdf>=4.2.0",
    "cryptography>=46.0.3",
    "mecab-python3>=1.0.10",
    "unidic-lite>=1.0.8",
    "unidic>=1.1.0",
]
